--- a/menu1.html
+++ b/menu1.html
@@ -16,7 +16,7 @@
                    <div class="icon"><i class="fas fa-music fa-3x"></i></div><br><h2>la note enchantée</h2>
                <section>     
                      <aside>
-                        <img src="menu1_gauche.png" alt="ligne"><span class="note1">prélud</span> <img src="menu1_droite.png" alt="ligne">
+                        <img src="menu1_gauche.png" alt="ligne"><span class="note1">prélude</span> <img src="menu1_droite.png" alt="ligne">
                       </aside>
                 <article>
                     <p class="text">ravioles de fois gras accompagnés de leur créme a la trufffe</p>
@@ -37,7 +37,7 @@
         </section>
         <section>    
             <aside>
-                  <img src="menu1_gauche.png" alt="bar1"><span class="note2"> d'orgue</span><img src="menu1_droite.png" alt="bar2">
+                  <img src="menu1_gauche.png" alt="bar1"><span class="note2">point d'orgue</span><img src="menu1_droite.png" alt="bar2">
             </aside>
            <article >
                  <p class="text">noix de coquilles saint-jacques sur lit de purée de céleri-rave</p>
