--- a/menu2.html
+++ b/menu2.html
@@ -22,7 +22,7 @@
                <div class="prix">79€</div>
            </article>         
             <article>
-              <p class="text">velouté de légumes d'entan</p>
+              <p class="text">velouté de légumes d'antan</p>
               <div class="prix">57€</div>
             </article>        
            <article>
@@ -58,7 +58,7 @@
 
        <section class="menu3">     
            <article>
-                 <p class="text">pétales de vilettes glacés et purée de noisettes</p>
+                 <p class="text">pétales de violettes glacés et purée de noisettes</p>
            </article>
             <article>
                   <p class="text">fondant au chocolat revisitée</p>
