--- a/menu3.html
+++ b/menu3.html
@@ -30,15 +30,15 @@
                  <img src="menu3_gauche_plat.png" alt="bar"><span class="delice2"> pour bien continuer</span><img src="menu3_droite_plat.png" alt="bar">
             </aside>
            <article>
-                <p class="text">poulet roti aux herbes de provence et ça créme de truffe</p>
+                <p class="text">poulet rôti aux herbes de provence et ça créme de truffe</p>
                 <div class="prix">110€</div>
             </article>
             <article>    
-                <p class="text">langouste rotie et ses légumes de saison</p>
+                <p class="text">langouste rôtie et ses légumes de saison</p>
                 <div class="prix">225€</div>
             </article> 
             <article > 
-                <p class="text">cote de beouf angus et sa purée de panais</p>
+                <p class="text">côte de beouf angus et sa purée de panais</p>
                 <div class="prix">115€</div>
             </article>
             <aside>
