--- a/menu4.html
+++ b/menu4.html
@@ -10,9 +10,9 @@
  <h1>ohmyfood</h1>
  <div class="blocpage4">
      
-          <h6 id="menu4">la pallette du goût</h6>
+          <h6>la pallette du goût</h6>
           <aside>
-             <img src="menu4_gauche.png" alt="bar"><span class="gout1">esquise</span><img src="menu4_droite.png" alt="bar"> 
+             <img src="menu4_gauche.png" alt="bar"><span class="gout1">Esquise</span><img src="menu4_droite.png" alt="bar"> 
           </aside>
              <article>
                <p class="text">fricasée d'escargotau piment d'esplette</p>
@@ -27,7 +27,7 @@
                 <div class="prix">65€</div>
            </article>
            <aside>
-              <img src="menu4_gauche.png" alt="bar"><span class="gout2">Ouvre de maitre</span><img src="menu4_droite.png" alt="bar">
+              <img src="menu4_gauche.png" alt="bar"><span class="gout2">Ouvre de maître</span><img src="menu4_droite.png" alt="bar">
            </aside> 
           <article>
                 <p class="text">filet de boeuf aux herbes accompagnées de sa ribambelle de légumes</p>
