--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
  <header>
         <h1>ohmyfood</h1>
  </header>   
- <section>  
+   
          <div class="container">
           <div class="box box--1">
               <a href="menu1.html"><i class="fas fa-music"></i><br>la note enchantée<br>
                 <strong> Menu</strong></a>
             </div>
           <div class="box box--2">
-              <a href="menu2.html" ><br>le chic a la française<br>
+              <a href="menu2.html" ><br>le chic à la française<br>
                 <strong>Menu</strong></a>
             </div>
           <div class="box box--3">
@@ -32,7 +32,6 @@
                 <strong>Menu</strong></a>
             </div> 
         </div>
- </section>   
     
       <div class="box5">
                  <em> prochainement<span class="btn">.</span></em>
