--- a/menu2.html
+++ b/menu2.html
@@ -10,10 +10,10 @@
     <h1>ohmyfood</h1>
      
  <div class="blocpage2"> 
-       <h3>le chic a la française</h3>
+       <h3>le chic à la française</h3>
           <aside>
              <img src="menu2_droite_entree.png " alt ="ligne" class="responsive">
-             <span class="chic1"> pour se mettre en appétit</span><img src="menu2_droite_entree.png"alt="ligne" class="responsive">
+             <span class="chic1"> Pour se mettre en appétit</span><img src="menu2_droite_entree.png"alt="ligne" class="responsive">
            </aside>
     <div class="menu1">
           
@@ -32,7 +32,7 @@
      </div>      
                   <aside>              
                         <img src="menu2_droite_plat.png " alt ="bar" >
-                        <span class="chic2">plaisir des papilles</span>
+                        <span class="chic2">Plaisir des papilles</span>
                         <img src="menu2_droite_plat.png"alt="bar">
                   </aside>
         <div class="menu2">
