--- a/menu3.html
+++ b/menu3.html
@@ -12,7 +12,7 @@
         <div class="blocpage3">
              <h5 id="menu3">le délice des papilles</h5>
                  <aside> 
-                    <img src="menu3_gauche_entree.png" alt="bar"><span class="delice1">pour bien commencer</span><img src="menu3_droite_entree.png" alt="bar">
+                    <img src="menu3_gauche_entree.png" alt="bar"><span class="delice1">Pour bien commencer</span><img src="menu3_droite_entree.png" alt="bar">
                   </aside>
                     <article>     
                    <p class="text">tarte de thon assaisonné au yuzu</p>
@@ -27,7 +27,7 @@
                    <div class="prix">56€</div>
              </article> 
              <aside>    
-                 <img src="menu3_gauche_plat.png" alt="bar"><span class="delice2"> pour bien continuer</span><img src="menu3_droite_plat.png" alt="bar">
+                 <img src="menu3_gauche_plat.png" alt="bar"><span class="delice2"> Pour bien continuer</span><img src="menu3_droite_plat.png" alt="bar">
             </aside>
            <article>
                 <p class="text">poulet rôti aux herbes de provence et ça créme de truffe</p>
@@ -42,7 +42,7 @@
                 <div class="prix">115€</div>
             </article>
             <aside>
-                  <img src="menu3_gauche_dessert.png" alt="bar"><span class="delice3">pour bien termier</span><img src="menu3_droite_dessert.png" alt="bar">
+                  <img src="menu3_gauche_dessert.png" alt="bar"><span class="delice3">Pour bien termier</span><img src="menu3_droite_dessert.png" alt="bar">
             </aside>
             <article>
                 <p class="text">farandole de desserts de chef</p>
