--- a/menu1.html
+++ b/menu1.html
@@ -19,7 +19,7 @@
                         <img src="menu1_gauche.png" alt="ligne"><span class="note1">Prélude</span> <img src="menu1_droite.png" alt="ligne">
                       </aside>
                 <article>
-                    <p class="text">ravioles de fois gras accompagnés de leur créme a la trufffe</p>
+                    <p class="text">ravioles de fois gras accompagnés de leur créme a la truffe</p>
                     <div class="prix">98€</div>
                 </article>
                <article>    
